@@ -18,6 +18,7 @@ Release 1.3.6 (2009-07-xx)
 - fixed SF# 2186643: Data::Statement::reset() not implemented in 1.3.3
 - fixed SF# 2164227: Allow File opened read only by FileInputSteam to be writable
 - fixed SF# 2791934: use of char_traits::copy in BufferedStreamBuf::underflow
+- fixed SF# 2807750: Support additional SQL types in SQLite
 
 
 Release 1.3.5 (2009-05-11)
@@ -1064,4 +1065,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.3/dist/CHANGELOG#48 $
+$Id: //poco/1.3/dist/CHANGELOG#49 $
